# atividade_aps_p2

./: .env.example  .gitignore  README.md  compose.dev.yml  compose.yml  docker-compose.yml  requirements.txt
backend/: .dockerignore  docker-entrypoint.sh  pyproject.toml
backend/apps/accounts/: __init__.py  models.py
backend/apps/accounts/application/: __init__.py  dtos.py
backend/apps/accounts/domain/: __init__.py  entities.py  exceptions.py  repositories.py  services.py
backend/apps/accounts/infrastructure/: __init__.py  models.py  repositories.py  services.py
backend/apps/accounts/migrations/: 0001_initial.py
backend/apps/accounts/presentation/: __init__.py  serializers.py  urls.py  views.py
backend/apps/chat/: models.py
backend/apps/chat/application/: __init__.py  dtos.py
backend/apps/chat/domain/: __init__.py  entities.py  repositories.py  value_objects.py
backend/apps/chat/infrastructure/: __init__.py  repositories.py
backend/apps/chat/migrations/: 0001_initial.py
backend/apps/chat/presentation/: __init__.py  serializers.py  urls.py  views.py
backend/apps/chat/tests/: __init__.py
backend/apps/organizations/: models.py
backend/apps/organizations/application/: __init__.py  commands.py  observers.py  (+1 more)
backend/apps/publications/: models.py
backend/config/: asgi.py  urls.py  wsgi.py
backend/config/settings/: __init__.py  base.py  development.py  production.py
backend/core/: __init__.py  base_entity.py  base_repository.py  base_use_case.py  env.py  exceptions.py
backend/requirements/: base.txt  development.txt  production.txt
(+127 files in other folders)
